--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGODB_URI=mongodb://localhost:27017/crm_ticket_system
 PORT=5000
+JWT_ACCESS_SECRET=abhiheskmishra
+JWT_REFRESH_SECRET=abhiheskmishra
