added refreshJWT to mongoDB database

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MONGODB_URI=mongodb://localhost:27017/crm_ticket_system
 PORT=5000
 JWT_ACCESS_SECRET=abhiheskmishra
 JWT_REFRESH_SECRET=abhiheskmishra
+REDIS_URL=redis://localhost:6379
